--- a/static/css/resume/resume-edit1.css
+++ b/static/css/resume/resume-edit1.css
@@ -1451,7 +1451,7 @@ textarea:focus {
     margin: 0px !important;
 }
 
-.jobcategory-inputarea {
+.jobcategory-inputarea, .working, .nondevelop, .noexpire-input {
     width: 100%;
     height: 48px;
     padding: 12px 16px;
@@ -2123,6 +2123,18 @@ textarea:focus {
     margin-top: 6px;
 }
 
+.membercareer-edit-mark.clicked::after {
+    position: absolute;
+    content: "";
+    height: calc(100% + 9px);
+    padding-bottom: 10px;
+    width: 1px;
+    top: 18px;
+    left: 5px;
+    z-index: 1;
+    background-color: rgb(212, 212, 212);
+}
+
 .membercareer-date1 {
     position: relative;
 }
@@ -2693,6 +2705,10 @@ textarea:focus {
 .etc-calander .calendar-box {
     display: flex;
     align-items: center;
+}
+
+.etc-calander .read_only {
+    opacity: 0.3;
 }
 
 .etc-calander .calendar-area>div {
