--- a/templates/resume/resume-edit.html
+++ b/templates/resume/resume-edit.html
@@ -1576,7 +1576,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <button type="button">
+                                            <button type="button" id="applicant-add-button">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                                                     fill="none" viewBox="0 0 20 20">
                                                     <path fill="#00DD6D" fill-rule="evenodd"
