--- a/templates/main/companyDetail.html
+++ b/templates/main/companyDetail.html
@@ -561,11 +561,155 @@
                             <span>전체 직원수</span>
                             <strong>226명</strong>
                         </div>
-                        <div class="employeeGraph"></div>
+                        <div class="employeeGraph">
+                            <div>
+                                <ul class="graphCompMember">
+                                    <li>
+                                        <span
+                                            class="circle"
+                                            style="background-color: #2e37ff"
+                                        ></span>
+                                        직원 수
+                                    </li>
+                                    <li>
+                                        <span
+                                            class="square"
+                                            style="background-color: #00dd6d"
+                                        ></span>
+                                        입사자 수
+                                    </li>
+                                    <li>
+                                        <span
+                                            class="square"
+                                            style="background-color: #c4c4c4"
+                                        ></span>
+                                        퇴사자 수
+                                    </li>
+                                </ul>
+                                <canvas
+                                    id="companyGraph"
+                                    role="img"
+                                    height="493"
+                                    width="987"
+                                    style="
+                                        display: block;
+                                        box-sizing: border-box;
+                                        height: 395px;
+                                        width: 790;
+                                    "
+                                ></canvas>
+                            </div>
+                        </div>
                     </section>
-                    <section class="companySalary compSection"></section>
-                    <section class="companyInvestment compSection"></section>
-                    <section class="companyIngPosition compSection"></section>
+                    <section class="companySalary compSection">
+                        <h2>평균 연봉 정보</h2>
+                        <span class="source"
+                            >출처: 사람인 내부 수집자료 분석</span
+                        >
+                        <ul class="salaryInfo">
+                            <li>
+                                <div>
+                                    <span>전체</span>
+                                </div>
+                                <strong class="salary">5,266만원</strong>
+                            </li>
+                            <li>
+                                <div>
+                                    <span>신뢰도</span>
+                                    <div
+                                        class="reliabilityBtn"
+                                        aria-pressed="false"
+                                        role="button"
+                                    >
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="24"
+                                            height="24"
+                                            fill="none"
+                                            viewBox="0 0 24 24"
+                                            aria-hidden="true"
+                                        >
+                                            <path
+                                                fill="#C4C4C4"
+                                                fill-rule="evenodd"
+                                                d="M12 20a8 8 0 1 0 0-16 8 8 0 0 0 0 16Zm10-8c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM12 8.75a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm-1 7.5a1 1 0 1 0 2 0v-5a1 1 0 1 0-2 0v5Z"
+                                                clip-rule="evenodd"
+                                            ></path>
+                                        </svg>
+                                        <span class="blind"
+                                            >신뢰도 관련 툴팁</span
+                                        >
+                                    </div>
+                                </div>
+                                <strong class="reliability">높음</strong>
+                            </li>
+                        </ul>
+                        <ul class="salaryDetail">
+                            <li>
+                                본 자료는 사람인 내부 수집 데이터와 기업의
+                                경영공시자료, 공공기관의 공개자료 및 보도자료,
+                                기타 자료(국민연금)를 토대로 통계분석하여
+                                추정하였습니다. 연봉 데이터 출처 및 성과급,
+                                계약직 근로자 급여 등의 포함 여부는 기업별로
+                                다를 수 있으며, 실제 기업의 연봉과 차이가 발생할
+                                수 있으므로 해당 기업의 정보 및 급여 수준을
+                                참고하는 자료로 활용하시기를 권장해 드립니다.
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="companyInvestment compSection">
+                        <h2>투자 정보</h2>
+                        <ul class="investmentInfo">
+                            <li>
+                                <div>
+                                    <span>최종투자 단계</span>
+                                </div>
+                                <strong class="phase">Series C</strong>
+                            </li>
+                            <li>
+                                <div>
+                                    <span>누적 투자액</span>
+                                </div>
+                                <strong class="amount">790억 3,000만원</strong>
+                            </li>
+                            <li>
+                                <div>
+                                    <span>투자유치 횟수</span>
+                                </div>
+                                <strong class="count">3회</strong>
+                            </li>
+                        </ul>
+                        <ul class="investmentDetail">
+                            <li>
+                                • 본 정보는 신뢰할 만한 자료를 직접 수집/분석한
+                                추정 정보로, 제공된 정보에 대한 법적인 책임을
+                                지지 않습니다.
+                            </li>
+                            <li>
+                                • 기업의 투자 유치 사실을 직접 검증하지 않아
+                                정확성을 보장 할 수 없으며, 시간이 경과함에 따라
+                                변경될 수 있습니다.
+                            </li>
+                            <li>
+                                • 본 자료의 저작권은 (주)사람인에 있으며 동의
+                                없이 재가공 및 재배포할 수 없음을 알려드립니다.
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="companyIngPosition compSection">
+                        <h2>채용중인 포지션</h2>
+                        <em class="num">2</em>
+                        <div class="positionWrapper">
+                            <div class="currentPositions">
+                                <a href="" class="compPosition">
+                                    <label class="positionLeftDate">
+                                        <span></span>
+                                    </label>
+                                </a>
+                                <a href="" class="compPosition"></a>
+                            </div>
+                        </div>
+                    </section>
                 </div>
                 <nav class="sideNavigation"></nav>
             </div>
@@ -718,4 +862,5 @@
         <!-- // 푸터 끝 -->
     </body>
     <script src="../../static/js/main/companyDetail.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </html>
